@@ -1,5 +1,10 @@
 2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/worddef.h:
+	  - Apply "indent -nut" + manual adjustments.
+
+2011-12-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/wordseg.cpp:
 	  - Declare internal functions static.
 	  - Simplify myyisspace() and make it bool.
